--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     restart: always
     ports:
       - 8081:8081
+      
+    environment:
+      - PYTHONUNBUFFERED=1
 
   ws-service-frontend:
     build: ./frontend
