--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,17 @@ services:
 
   ws-service-backend:
     build: ./backend
+    image: public.ecr.aws/p3f3a4s7/webscience-delivery-2:backend
     restart: always
     ports:
       - 8081:8081
-      
+
     environment:
       - PYTHONUNBUFFERED=1
 
   ws-service-frontend:
     build: ./frontend
+    image: public.ecr.aws/p3f3a4s7/webscience-delivery-2:frontend
     restart: always
     ports:
       - 8080:8080
