--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,29 +24,16 @@
     "undici": "^4.10.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.1.1",
-    "worker-loader": "^2.0.0",
-    "yaml-loader": "^0.8.0"
+    "webpack-dev-server": "^4.1.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.10.4",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
     "@rsuite/icons": "^1.0.2",
-    "@turf/distance": "^6.0.1",
-    "@turf/helpers": "^6.1.4",
-    "array-buffer-to-hex": "^1.0.0",
     "axios": "^0.21.4",
-    "encode-utf8": "^2.0.0",
-    "query-string": "^7.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.13.1",
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
-    "rsuite": "5.31.1",
-    "styled-components": "^5.1.1",
-    "wellknown": "^0.5.0"
+    "rsuite": "5.31.1"
   }
 }
